# fractal-generator

./: CMakeLists.txt  README.md  TODO.md  main.c  meson.build  project_variables.h.in
app_ui/: CMakeLists.txt  app_ui.c  app_ui.h  app_ui_gl_area.c  app_ui_home.c  app_ui_settings.c  app_ui_utils.c  app_ui_utils.h  meson.build
data/: meson.build
data/shader/: fragment.glsl  vertex.glsl
data/ui/: app_ui_home.ui  app_ui_settings.ui
desktop/: fractal-generator.desktop
fractal/: CMakeLists.txt  fractal.c  fractal.h  meson.build
glad/: CMakeLists.txt  glad.c  glad.h  meson.build
gschemas/: com.nicolarevelant.fractal-generator.gschema.xml
po/: POTFILES  fractal-generator.pot  it.po
shader/: vertex.glsl
ui/: app_ui.ui  app_ui_settings.ui
video/: CMakeLists.txt  meson.build  video.c  video.h
